@@ -55,6 +55,8 @@ Bugfixes
    * Avoid segfault when motion cannot create a logfile. (Angel Carpintero)
    * No mysql_close
      http://www.lavrsen.dk/foswiki/bin/view/Motion/BugReport2010x11x22x033859
+   * Input for webcams has to be set to -1
+     http://www.lavrsen.dk/foswiki/bin/view/Motion/BugReport2011x01x21x162309
 
 3.2.12 Summary of Changes
 
